--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,17 @@
 
   <groupId>com.bgc.poc</groupId>
   <artifactId>connected</artifactId>
-  <version>1.0.0</version>
+  <version>23.1.3</version>
   <packaging>jar</packaging>
 
   <name>connected</name>
   <url>http://maven.apache.org</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	  <maven.compiler.source>17</maven.compiler.source>
+	  <maven.compiler.target>17</maven.compiler.target>
+	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	  <kotlin.version>1.8.10</kotlin.version>
   </properties>
 
   <dependencies>
@@ -21,6 +24,11 @@
       <version>4.10</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>org.jetbrains.kotlin</groupId>
+	  <artifactId>kotlin-stdlib</artifactId>
+	  <version>${kotlin.version}</version>
+	</dependency>
   </dependencies>
   <build>
 		<plugins>
@@ -29,8 +37,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			<plugin>
